--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
     <head>
+        <link rel="stylesheet" href="style.css" />
         <title>My Website</title>
     </head>
+
     <body>
-        <h1>Hello World!</h1>
+        <header>
+            <h1>Hello world!</h1>  
+        </header>
+        
     </body>
+
 </html>
