--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <head>
         <link rel="stylesheet" href="style.css" />
         <title>My Website</title>
+        
     </head>
 
     <body>
-        <header>
-            <h1>Hello world!</h1>  
-        </header>
+        <h1>Hello world!</h1>  
+        <script src="script.js"></script>
         
     </body>
 
